#28/refactoring: Controller 응답 방식 변형 - ResponseEntity로 통일