@@ -6,6 +6,7 @@ import com.kidk.api.domain.family.service.FamilyService;
 import com.kidk.api.domain.family.entity.Family;
 import com.kidk.api.domain.familymember.entity.FamilyMember;
 import lombok.RequiredArgsConstructor;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
@@ -18,27 +19,35 @@ public class FamilyController {
 
     private final FamilyService familyService;
 
+    /// 가족 생성
     @PostMapping
-    public FamilyResponse createFamily(@RequestBody FamilyRequest.Create request) {
+    public ResponseEntity<FamilyResponse> createFamily(@RequestBody FamilyRequest.Create request) {
         Family family = familyService.createFamily(request.getUserId(), request.getFamilyName());
-        return new FamilyResponse(family);
+        FamilyResponse familyResponse = new FamilyResponse(family);
+        return ResponseEntity.ok(familyResponse);
     }
 
+    /// 가족 초대
     @PostMapping("/join")
-    public FamilyMember joinFamily(@RequestBody FamilyRequest.Join request) {
-        // FamilyMemberResponse도 만들면 좋지만 일단 Entity 반환 유지
-        return familyService.joinFamily(request.getUserId(), request.getInviteCode());
+    public ResponseEntity<FamilyMember> joinFamily(@RequestBody FamilyRequest.Join request) {
+        FamilyMember familyMember = familyService.joinFamily(request.getUserId(), request.getInviteCode());
+        return ResponseEntity.ok(familyMember);
     }
 
+    /// 가족 목록 조회
     @GetMapping
-    public List<FamilyResponse> getFamilies() {
-        return familyService.findAll().stream()
-                .map(FamilyResponse::new)
-                .collect(Collectors.toList());
+    public ResponseEntity<List<FamilyResponse>> getFamilies() {
+        List<FamilyResponse> familyResponses = familyService.findAll().stream()
+                                .map(FamilyResponse::new)
+                                .toList();
+        return ResponseEntity.ok(familyResponses);
     }
 
+    /// 특정 가족 조회
     @GetMapping("/{familyId}")
-    public FamilyResponse getFamily(@PathVariable Long familyId) {
-        return new FamilyResponse(familyService.findById(familyId));
+    public ResponseEntity<FamilyResponse> getFamily(@PathVariable Long familyId) {
+        Family family = familyService.findById(familyId);
+        FamilyResponse familyResponse = new FamilyResponse(family);
+        return ResponseEntity.ok(familyResponse);
     }
 }
